Fixes to Naga spawning, entity render and tracking distances, despawn distances * commit 42a8a44c + switch hardcoded resource location references to actual objects in ConfigHandler.java